--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,19 @@
  *= require_tree .
  *= require_self
  */
+
+.player {
+    width: 450px;
+    margin: auto;
+    margin-top: 200px;
+}
+
+.logout {
+    width:100%;
+    height:30px;
+    position:absolute;
+    bottom:0;
+    left:0;
+    background: gray;
+    text-align: center;
+}
