--- a/app/views/sounds/index.html.erb
+++ b/app/views/sounds/index.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? %>
     <div class="player">
         <iframe width="100%" height="150" scrolling="no" frameborder="no"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/186489078&amp;auto_play=true&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/<%= @tracks.sample.id %>&amp;auto_play=true&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
     </div>
     <div class="logout"><%= link_to "Log out.", destroy_user_session_path %></div>
 <% else %>
