--- a/app/views/sounds/index.html.erb
+++ b/app/views/sounds/index.html.erb
@@ -1,9 +1,20 @@
+
 <% if user_signed_in? %>
-    <div class="player">
-        <iframe width="100%" height="150" scrolling="no" frameborder="no"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/<%= @tracks.sample.id %>&amp;auto_play=true&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+    <div class="wrap">
+        <div class="poweredby"><img src="https://developers.soundcloud.com/assets/powered_by_large_white-de881ecad8561c2131e7676fa9e92738.png"></img></div>
+            <div class="player">
+                <iframe width="100%" height="150" scrolling="no" frameborder="no"
+                        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/<%= @track.id %>&amp;auto_play=true&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+            </div>
+            <div>
+                <%= link_to root_path do %><button class="passbtn">Pass</button><% end %>
+                <%= button_to "Like", { controller: "sounds", action: "post_playlist"}, class: 'likebtn' %>
+            </div>
+        </div>
     </div>
-    <div class="logout"><%= link_to "Log out.", destroy_user_session_path %></div>
+<!-- <%= link_to "Log out.", destroy_user_session_path %> -->
 <% else %>
-    <%= link_to "Login with Soundcloud!", user_omniauth_authorize_path(provider: :soundcloud) %>
+    <div class="wrap">
+    <%= link_to user_omniauth_authorize_path(provider: :soundcloud) do %><button class="likebtn">Login with Soundcloud!</button><% end %>
+    <div>
 <% end %>
