Fix button styling

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -82,6 +82,12 @@ body {
     -webkit-appearance: none;
 }
 
+.button_to {
+    margin: 0;
+    padding: 0;
+    display: inline;
+}
+
 .logout {
     width:100%;
     height:30px;
