--- a/app/views/sounds/index.html.erb
+++ b/app/views/sounds/index.html.erb
@@ -7,7 +7,8 @@
                         src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/<%= @track.id %>&amp;auto_play=true&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
             </div>
             <div>
-                <%= link_to root_path do %><button class="passbtn">Pass</button><% end %>
+                <%= button_to "Pass", root_path, class: 'passbtn' %>
+
                 <%= button_to "Like", { controller: "sounds", action: "post_playlist"}, class: 'likebtn' %>
             </div>
         </div>
