--- a/app/views/sounds/index.html.erb
+++ b/app/views/sounds/index.html.erb
@@ -1,8 +1,10 @@
 
 <% if user_signed_in? %>
     <div class="wrap">
-        <div class="poweredby"><img src="https://developers.soundcloud.com/assets/powered_by_large_white-de881ecad8561c2131e7676fa9e92738.png"></img></div>
-            <div class="player">
+            <div>
+                <img src="https://developers.soundcloud.com/assets/powered_by_black-ee7e351d64511ecea75c6c17ca30064f.png"></img>
+            </div>
+            <div >
                 <iframe width="100%" height="150" scrolling="no" frameborder="no"
                         src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/<%= @track.id %>&amp;auto_play=true&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
             </div>
@@ -11,11 +13,23 @@
 
                 <%= button_to "Like", { controller: "sounds", action: "post_playlist" }, class: 'likebtn' %>
             </div>
+
+            <div><ul class="trackList__list sc-clearfix sc-list-nostyle">
+                <% @playlist.tracks.each do |x| %>
+                    <li class="trackList__item sc-border-light-bottom">
+                        <div class="trackItem sc-type-small sc-type-light editing">
+                            <div class="trackItem__content sc-media-content"><%= x.title %><div class="trackItem__additional sc-media">Plays: <%= x.playback_count %></div></div>
+                        </div>
+                    </li>
+                <% end %>
+            </ul></div>
         </div>
     </div>
 <!-- <%= link_to "Log out.", destroy_user_session_path %> -->
 <% else %>
     <div class="wrap">
-    <%= link_to user_omniauth_authorize_path(provider: :soundcloud) do %><button class="likebtn">Login with Soundcloud!</button><% end %>
+        <div class="login">
+            <%= link_to user_omniauth_authorize_path(provider: :soundcloud) do %><button class="likebtn">Login with Soundcloud!</button><% end %>
+        </div>
     <div>
 <% end %>
