Hopefull keep div from going off screen

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -106,3 +106,9 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
+.toplogo {
+    position: fixed;
+    top: 0;
+    z-index: 0;
+    width: 100%;
+}
