--- a/app/views/sounds/index.html.erb
+++ b/app/views/sounds/index.html.erb
@@ -1,7 +1,7 @@
 
 <% if user_signed_in? %>
     <div class="wrap">
-            <div>
+            <div class='toplogo'>
                 <img src="https://developers.soundcloud.com/assets/powered_by_black-ee7e351d64511ecea75c6c17ca30064f.png"></img>
             </div>
             <div >
