--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,7 +26,7 @@ body {
 .wrap{
     text-align: center;
     max-width: 600px;
-    max-height: 600px;
+    min-height: 600px;
     width: 100%;
     line-height: 2;
     padding: 10px;
