--- a/app/views/sounds/index.html.erb
+++ b/app/views/sounds/index.html.erb
@@ -1,30 +1,32 @@
 
 <% if user_signed_in? %>
+<div class="container"
     <div class="wrap">
-            <div class='toplogo'>
+            <div>
                 <img src="https://developers.soundcloud.com/assets/powered_by_black-ee7e351d64511ecea75c6c17ca30064f.png"></img>
             </div>
             <div >
                 <iframe width="100%" height="150" scrolling="no" frameborder="no"
                         src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/<%= @track.id %>&amp;auto_play=true&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
             </div>
-            <div>
+            <div class="center">
                 <%= button_to "Pass", sounds_path, method: :get, class: 'passbtn' %>
 
                 <%= button_to "Like", { controller: "sounds", action: "post_playlist" }, class: 'likebtn' %>
             </div>
-
-            <div><ul class="trackList__list sc-clearfix sc-list-nostyle">
+            <div>
+                <ul class="trackList__list sc-clearfix sc-list-nostyle">
                 <% @playlist.tracks.reverse_each do |x| %>
                     <li class="trackList__item sc-border-light-bottom">
-                        <div class="trackItem sc-type-small sc-type-light editing">
+                        <div class="trackItem sc-type-small sc-type-light editing padding">
                             <div><b><%= x.title %></b><div class="trackItem__additional sc-media">by <%= x.user.username %></div></div>
                         </div>
                     </li>
                 <% end %>
-            </ul></div>
-        </div>
+                </ul>
+            </div>
     </div>
+</div>
 <!-- <%= link_to "Log out.", destroy_user_session_path %> -->
 <% else %>
     <div class="wrap">
